--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,6 +1,29 @@
 @import "tailwindcss";
 @import "tailwind-animate";
 
+:root {
+  --background: rgba(26, 26, 26, 1);
+
+  --background-card: rgba(46, 46, 46, 1);
+  --background-card-hover: rgba(70, 69, 69, 1);
+
+  --secondary: rgba(40, 40, 40, 1);
+  --foreground-secondary: rgb(70, 69, 69);
+  --button-hover: rgb(70, 69, 69);
+  --primary: rgba(112, 87, 255, 1);
+  --foreground: rgba(155, 155, 155, 1);
+  --accent: rgba(255, 255, 255, 1);
+  --success: rgba(95, 255, 87, 1);
+  --purple: rgba(112, 87, 255, 0.2);
+  --text-sm: clamp(12px, 1.8vw, 14px);
+  --text-base: clamp(13px, 2vw, 16px);
+  --text-lg: clamp(16px, 2vw, 20px);
+  --text-lgx: clamp(24px, 2vw, 28px);
+  --text-xl: clamp(28px, 5vw, 40px);
+
+  --container: 1240px;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -12,6 +35,7 @@
   --color-accent: var(--accent);
   --color-success: var(--success);
   --color-button-hover: var(--button-hover);
+  --text-lgx: var(--text-lgx);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -31,8 +55,8 @@
     --purple: rgba(112, 87, 255, 0.2);
     --text-sm: clamp(12px, 1.8vw, 14px);
     --text-base: clamp(13px, 2vw, 16px);
-    --text-lg: clamp(16px, 2.5vw, 20px);
-    --text-lgx: clamp(20px, 2vw, 24px);
+    --text-lg: clamp(16px, 2vw, 20px);
+    --text-lgx: clamp(24px, 2vw, 28px);
     --text-xl: clamp(28px, 5vw, 40px);
 
     --container: 1240px;
